--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
+    "@vercel/analytics": "^1.5.0",
     "googleapis": "^105.0.0",
     "next": "16.0.3",
     "react": "19.2.0",
